Fix punctuation after links wrapping.

--- a/assets/styles/_links.scss
+++ b/assets/styles/_links.scss
@@ -72,6 +72,4 @@
 %link--text {
 	@extend %--focus;
 	@extend %link--enlargement--text;
-
-	display: inline-block;
 }
